@@ -3,13 +3,14 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.openloadflow.network;
 
 import com.fasterxml.jackson.core.JsonFactory;
 import com.fasterxml.jackson.core.JsonGenerator;
 import com.google.common.base.Stopwatch;
-import com.powsybl.commons.reporter.Reporter;
+import com.powsybl.commons.report.ReportNode;
 import com.powsybl.openloadflow.graph.GraphConnectivity;
 import com.powsybl.openloadflow.graph.GraphConnectivityFactory;
 import com.powsybl.openloadflow.util.PerUnit;
@@ -27,7 +28,6 @@ import java.nio.file.Path;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import static com.powsybl.openloadflow.util.Markers.PERFORMANCE_MARKER;
 
@@ -38,11 +38,15 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(LfNetwork.class);
 
+    private static final SlackBusSelector SLACK_BUS_SELECTOR_FALLBACK = new MostMeshedSlackBusSelector();
+
     private final int numCC;
 
     private final int numSC;
 
     private final SlackBusSelector slackBusSelector;
+
+    private final ReferenceBusSelector referenceBusSelector;
 
     private final int maxSlackBusCount;
 
@@ -53,6 +57,10 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
     private LfBus referenceBus;
 
     private List<LfBus> slackBuses;
+
+    private Set<LfBus> excludedSlackBuses = Collections.emptySet();
+
+    private LfGenerator referenceGenerator;
 
     private final List<LfBranch> branches = new ArrayList<>();
 
@@ -74,7 +82,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
 
     private final List<LfNetworkListener> listeners = new ArrayList<>();
 
-    private boolean valid = true;
+    private Validity validity = Validity.VALID;
 
     private final GraphConnectivityFactory<LfBus, LfBranch> connectivityFactory;
 
@@ -82,11 +90,28 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
 
     private final Map<LoadFlowModel, Set<LfZeroImpedanceNetwork>> zeroImpedanceNetworksByModel = new EnumMap<>(LoadFlowModel.class);
 
-    private Reporter reporter;
+    private ReportNode reportNode;
 
     private final List<LfSecondaryVoltageControl> secondaryVoltageControls = new ArrayList<>();
 
     private final List<LfVoltageAngleLimit> voltageAngleLimits = new ArrayList<>();
+
+    public enum Validity {
+        VALID("Valid"),
+        INVALID_NO_GENERATOR("Network has no generator"),
+        INVALID_NO_GENERATOR_VOLTAGE_CONTROL("Network has no generator with voltage control enabled");
+
+        private final String description;
+
+        Validity(String description) {
+            this.description = description;
+        }
+
+        @Override
+        public String toString() {
+            return this.description;
+        }
+    }
 
     public static class LfVoltageAngleLimit {
         private final String id;
@@ -127,18 +152,19 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
     protected final List<LfOverloadManagementSystem> overloadManagementSystems = new ArrayList<>();
 
     public LfNetwork(int numCC, int numSC, SlackBusSelector slackBusSelector, int maxSlackBusCount,
-                     GraphConnectivityFactory<LfBus, LfBranch> connectivityFactory, Reporter reporter) {
+                     GraphConnectivityFactory<LfBus, LfBranch> connectivityFactory, ReferenceBusSelector referenceBusSelector, ReportNode reportNode) {
         this.numCC = numCC;
         this.numSC = numSC;
         this.slackBusSelector = Objects.requireNonNull(slackBusSelector);
         this.maxSlackBusCount = maxSlackBusCount;
         this.connectivityFactory = Objects.requireNonNull(connectivityFactory);
-        this.reporter = Objects.requireNonNull(reporter);
+        this.referenceBusSelector = referenceBusSelector;
+        this.reportNode = Objects.requireNonNull(reportNode);
     }
 
     public LfNetwork(int numCC, int numSC, SlackBusSelector slackBusSelector, int maxSlackBusCount,
-                     GraphConnectivityFactory<LfBus, LfBranch> connectivityFactory) {
-        this(numCC, numSC, slackBusSelector, maxSlackBusCount, connectivityFactory, Reporter.NO_OP);
+                     GraphConnectivityFactory<LfBus, LfBranch> connectivityFactory, ReferenceBusSelector referenceBusSelector) {
+        this(numCC, numSC, slackBusSelector, maxSlackBusCount, connectivityFactory, referenceBusSelector, ReportNode.NO_OP);
     }
 
     public int getNumCC() {
@@ -149,12 +175,21 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
         return numSC;
     }
 
-    public Reporter getReporter() {
-        return reporter;
+    public ReportNode getReportNode() {
+        return reportNode;
     }
 
-    public void setReporter(Reporter reporter) {
-        this.reporter = Objects.requireNonNull(reporter);
+    public void setReportNode(ReportNode reportNode) {
+        this.reportNode = Objects.requireNonNull(reportNode);
+    }
+
+    public LfElement getElement(ElementType elementType, int num) {
+        return switch (elementType) {
+            case BUS -> getBus(num);
+            case BRANCH -> getBranch(num);
+            case SHUNT_COMPENSATOR -> getShunt(num);
+            case HVDC -> getHvdc(num);
+        };
     }
 
     private void invalidateSlackAndReference() {
@@ -168,18 +203,42 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
             referenceBus.setReference(false);
         }
         referenceBus = null;
+        if (referenceGenerator != null) {
+            referenceGenerator.setReference(false);
+        }
+        referenceGenerator = null;
     }
 
     public void updateSlackBusesAndReferenceBus() {
-        if (slackBuses == null || referenceBus == null) {
+        if (slackBuses == null && referenceBus == null) {
             SelectedSlackBus selectedSlackBus = slackBusSelector.select(busesByIndex, maxSlackBusCount);
-            slackBuses = selectedSlackBus.getBuses();
+            slackBuses = selectedSlackBus.getBuses().stream()
+                    .filter(bus -> !excludedSlackBuses.contains(bus))
+                    .toList();
+            if (slackBuses.isEmpty()) { // ultimate fallback
+                selectedSlackBus = SLACK_BUS_SELECTOR_FALLBACK.select(busesByIndex, excludedSlackBuses.size() + maxSlackBusCount);
+                slackBuses = selectedSlackBus.getBuses().stream()
+                        .filter(bus -> !excludedSlackBuses.contains(bus))
+                        .limit(maxSlackBusCount)
+                        .toList();
+            }
             LOGGER.info("Network {}, slack buses are {} (method='{}')", this, slackBuses, selectedSlackBus.getSelectionMethod());
             for (var slackBus : slackBuses) {
                 slackBus.setSlack(true);
             }
-            referenceBus = slackBuses.get(0);
+            // reference bus must be selected after slack bus, because of ReferenceBusFirstSlackSelector implementation requiring slackBuses
+            SelectedReferenceBus selectedReferenceBus = referenceBusSelector.select(this);
+            referenceBus = selectedReferenceBus.getLfBus();
+            LOGGER.info("Network {}, reference bus is {} (method='{}')", this, referenceBus, selectedReferenceBus.getSelectionMethod());
             referenceBus.setReference(true);
+            if (selectedReferenceBus instanceof SelectedGeneratorReferenceBus generatorReferenceBus) {
+                referenceGenerator = generatorReferenceBus.getLfGenerator();
+                LOGGER.info("Network {}, reference generator is {}", this, referenceGenerator.getId());
+                referenceGenerator.setReference(true);
+            }
+            if (connectivity != null) {
+                connectivity.setMainComponentVertex(slackBuses.get(0));
+            }
         }
     }
 
@@ -253,6 +312,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
     }
 
     public LfBus getReferenceBus() {
+        updateSlackBusesAndReferenceBus();
         return referenceBus;
     }
 
@@ -263,6 +323,23 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
     public List<LfBus> getSlackBuses() {
         updateSlackBusesAndReferenceBus();
         return slackBuses;
+    }
+
+    public Set<LfBus> getExcludedSlackBuses() {
+        return excludedSlackBuses;
+    }
+
+    public void setExcludedSlackBuses(Set<LfBus> excludedSlackBuses) {
+        Objects.requireNonNull(excludedSlackBuses);
+        if (!excludedSlackBuses.equals(this.excludedSlackBuses)) {
+            this.excludedSlackBuses = excludedSlackBuses;
+            invalidateSlackAndReference();
+        }
+    }
+
+    public LfGenerator getReferenceGenerator() {
+        updateSlackBusesAndReferenceBus();
+        return referenceGenerator;
     }
 
     public List<LfShunt> getShunts() {
@@ -307,6 +384,10 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
         return hvdcs;
     }
 
+    public LfHvdc getHvdc(int num) {
+        return hvdcs.get(num);
+    }
+
     public LfHvdc getHvdcById(String id) {
         Objects.requireNonNull(id);
         return hvdcsById.get(id);
@@ -315,19 +396,26 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
     public void updateState(LfNetworkStateUpdateParameters parameters) {
         Stopwatch stopwatch = Stopwatch.createStarted();
 
+        LfNetworkUpdateReport updateReport = new LfNetworkUpdateReport();
+
         for (LfBus bus : busesById.values()) {
             bus.updateState(parameters);
             for (LfGenerator generator : bus.getGenerators()) {
-                generator.updateState();
+                generator.updateState(parameters);
             }
             bus.getShunt().ifPresent(shunt -> shunt.updateState(parameters));
             bus.getControllerShunt().ifPresent(shunt -> shunt.updateState(parameters));
         }
-        for (LfBranch branch : branches) {
-            branch.updateState(parameters);
+        branches.forEach(branch -> branch.updateState(parameters, updateReport));
+        hvdcs.forEach(LfHvdc::updateState);
+
+        if (updateReport.closedSwitchCount + updateReport.openedSwitchCount > 0) {
+            LOGGER.debug("Switches status update: {} closed and {} opened", updateReport.closedSwitchCount, updateReport.openedSwitchCount);
         }
-        for (LfHvdc hvdc : hvdcs) {
-            hvdc.updateState();
+        if (updateReport.connectedBranchSide1Count + updateReport.disconnectedBranchSide1Count
+                + updateReport.connectedBranchSide2Count + updateReport.disconnectedBranchSide2Count > 0) {
+            LOGGER.debug("Branches connection status update: {} connected side 1, {} disconnected side1, {} connected side 2, {} disconnected side 2",
+                    updateReport.connectedBranchSide1Count, updateReport.disconnectedBranchSide1Count, updateReport.connectedBranchSide2Count, updateReport.disconnectedBranchSide2Count);
         }
 
         stopwatch.stop();
@@ -438,6 +526,8 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
         jsonGenerator.writeBooleanField("voltageControl", generator.getGeneratorControlType() == LfGenerator.GeneratorControlType.VOLTAGE);
         jsonGenerator.writeNumberField("minP", generator.getMinP());
         jsonGenerator.writeNumberField("maxP", generator.getMaxP());
+        jsonGenerator.writeNumberField("minTargetP", generator.getMinTargetP());
+        jsonGenerator.writeNumberField("maxTargetP", generator.getMaxTargetP());
     }
 
     public void writeJson(Writer writer) {
@@ -450,7 +540,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
 
             jsonGenerator.writeFieldName("buses");
             jsonGenerator.writeStartArray();
-            List<LfBus> sortedBuses = busesById.values().stream().sorted(Comparator.comparing(LfBus::getId)).collect(Collectors.toList());
+            List<LfBus> sortedBuses = busesById.values().stream().sorted(Comparator.comparing(LfBus::getId)).toList();
             for (LfBus bus : sortedBuses) {
                 jsonGenerator.writeStartObject();
 
@@ -469,7 +559,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
                     }
                 });
 
-                List<LfGenerator> sortedGenerators = bus.getGenerators().stream().sorted(Comparator.comparing(LfGenerator::getId)).collect(Collectors.toList());
+                List<LfGenerator> sortedGenerators = bus.getGenerators().stream().sorted(Comparator.comparing(LfGenerator::getId)).toList();
                 if (!sortedGenerators.isEmpty()) {
                     jsonGenerator.writeFieldName("generators");
                     jsonGenerator.writeStartArray();
@@ -489,7 +579,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
 
             jsonGenerator.writeFieldName("branches");
             jsonGenerator.writeStartArray();
-            List<LfBranch> sortedBranches = branches.stream().sorted(Comparator.comparing(LfBranch::getId)).collect(Collectors.toList());
+            List<LfBranch> sortedBranches = branches.stream().sorted(Comparator.comparing(LfBranch::getId)).toList();
             for (LfBranch branch : sortedBranches) {
                 jsonGenerator.writeStartObject();
 
@@ -505,13 +595,13 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
         }
     }
 
-    private void reportSize(Reporter reporter) {
-        Reports.reportNetworkSize(reporter, busesById.values().size(), branches.size());
+    private void reportSize(ReportNode reportNode) {
+        Reports.reportNetworkSize(reportNode, busesById.values().size(), branches.size());
         LOGGER.info("Network {} has {} buses and {} branches",
             this, busesById.values().size(), branches.size());
     }
 
-    public void reportBalance(Reporter reporter) {
+    public void reportBalance(ReportNode reportNode) {
         double activeGeneration = 0;
         double reactiveGeneration = 0;
         double activeLoad = 0;
@@ -523,7 +613,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
             reactiveLoad += b.getLoadTargetQ() * PerUnit.SB;
         }
 
-        Reports.reportNetworkBalance(reporter, activeGeneration, activeLoad, reactiveGeneration, reactiveLoad);
+        Reports.reportNetworkBalance(reportNode, activeGeneration, activeLoad, reactiveGeneration, reactiveLoad);
         LOGGER.info("Network {} balance: active generation={} MW, active load={} MW, reactive generation={} MVar, reactive load={} MVar",
             this, activeGeneration, activeLoad, reactiveGeneration, reactiveLoad);
     }
@@ -536,12 +626,29 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
         } else {
             // zero impedance phase shifter controller or controlled branch is not supported
             branches.stream()
-                    .filter(b -> b.isPhaseController() || b.isPhaseControlled())
+                    .filter(b -> b.isPhaseController() || b.isPhaseControlled()
+                            || b.isTransformerReactivePowerController() || b.isTransformerReactivePowerControlled()
+                            || b.getGeneratorReactivePowerControl().isPresent())
                     .forEach(branch -> branch.setMinZ(lowImpedanceThreshold));
         }
     }
 
-    private void validateBuses(LoadFlowModel loadFlowModel, Reporter reporter) {
+    private void validateBuses(LoadFlowModel loadFlowModel, ReportNode reportNode) {
+        // DC or AC, if no generator, network is dead
+        boolean hasAtLeastOneBusGenerator = false;
+        for (LfBus bus : busesByIndex) {
+            if (!bus.getGenerators().isEmpty()) {
+                hasAtLeastOneBusGenerator = true;
+                break;
+            }
+        }
+        if (!hasAtLeastOneBusGenerator) {
+            // we don't report because this is too much on real networks
+            LOGGER.debug("Network {} has no generator and will be considered dead", this);
+            validity = Validity.INVALID_NO_GENERATOR;
+            return;
+        }
+        // AC requires at least one bus under voltage control
         if (loadFlowModel == LoadFlowModel.AC) {
             boolean hasAtLeastOneBusGeneratorVoltageControlEnabled = false;
             for (LfBus bus : busesByIndex) {
@@ -552,46 +659,59 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
             }
             if (!hasAtLeastOneBusGeneratorVoltageControlEnabled) {
                 LOGGER.error("Network {} must have at least one bus with generator voltage control enabled", this);
-                if (reporter != null) {
-                    Reports.reportNetworkMustHaveAtLeastOneBusGeneratorVoltageControlEnabled(reporter);
+                if (reportNode != null) {
+                    Reports.reportNetworkMustHaveAtLeastOneBusGeneratorVoltageControlEnabled(reportNode);
                 }
-                valid = false;
+                validity = Validity.INVALID_NO_GENERATOR_VOLTAGE_CONTROL;
             }
         }
     }
 
-    public void validate(LoadFlowModel loadFlowModel, Reporter reporter) {
-        valid = true;
-        validateBuses(loadFlowModel, reporter);
+    public void validate(LoadFlowModel loadFlowModel, ReportNode reportNode) {
+        validity = Validity.VALID;
+        validateBuses(loadFlowModel, reportNode);
     }
 
     public static <T> List<LfNetwork> load(T network, LfNetworkLoader<T> networkLoader, SlackBusSelector slackBusSelector) {
-        return load(network, networkLoader, new LfNetworkParameters().setSlackBusSelector(slackBusSelector), Reporter.NO_OP);
+        return load(network, networkLoader, new LfNetworkParameters().setSlackBusSelector(slackBusSelector), ReportNode.NO_OP);
     }
 
     public static <T> List<LfNetwork> load(T network, LfNetworkLoader<T> networkLoader, LfNetworkParameters parameters) {
-        return load(network, networkLoader, parameters, Reporter.NO_OP);
+        return load(network, networkLoader, parameters, ReportNode.NO_OP);
     }
 
-    public static <T> List<LfNetwork> load(T network, LfNetworkLoader<T> networkLoader, LfNetworkParameters parameters, Reporter reporter) {
-        return load(network, networkLoader, new LfTopoConfig(), parameters, reporter);
+    public static <T> List<LfNetwork> load(T network, LfNetworkLoader<T> networkLoader, LfNetworkParameters parameters, ReportNode reportNode) {
+        return load(network, networkLoader, new LfTopoConfig(), parameters, reportNode);
     }
 
-    public static <T> List<LfNetwork> load(T network, LfNetworkLoader<T> networkLoader, LfTopoConfig topoConfig, LfNetworkParameters parameters, Reporter reporter) {
+    public static <T> List<LfNetwork> load(T network, LfNetworkLoader<T> networkLoader, LfTopoConfig topoConfig, LfNetworkParameters parameters, ReportNode reportNode) {
         Objects.requireNonNull(network);
         Objects.requireNonNull(networkLoader);
         Objects.requireNonNull(parameters);
-        List<LfNetwork> lfNetworks = networkLoader.load(network, topoConfig, parameters, reporter);
+        List<LfNetwork> lfNetworks = networkLoader.load(network, topoConfig, parameters, reportNode);
+        int deadComponentsCount = 0;
         for (LfNetwork lfNetwork : lfNetworks) {
-            Reporter reporterNetwork = Reports.createPostLoadingProcessingReporter(lfNetwork.getReporter());
+            ReportNode networkReport = Reports.createNetworkInfoReporter(lfNetwork.getReportNode());
             lfNetwork.fix(parameters.isMinImpedance(), parameters.getLowImpedanceThreshold());
-            lfNetwork.validate(parameters.getLoadFlowModel(), reporterNetwork);
-            if (lfNetwork.isValid()) {
-                lfNetwork.reportSize(reporterNetwork);
-                lfNetwork.reportBalance(reporterNetwork);
-            } else {
-                LOGGER.info("Network {} is invalid, no calculation will be done", lfNetwork);
+            lfNetwork.validate(parameters.getLoadFlowModel(), networkReport);
+            switch (lfNetwork.getValidity()) {
+                case VALID -> {
+                    lfNetwork.reportSize(networkReport);
+                    lfNetwork.reportBalance(networkReport);
+                    Reports.reportAngleReferenceBusAndSlackBuses(networkReport, lfNetwork.getReferenceBus().getId(), lfNetwork.getSlackBuses().stream().map(LfBus::getId).toList());
+                    lfNetwork.setReportNode(Reports.includeLfNetworkReportNode(reportNode, lfNetwork.getReportNode()));
+                }
+                case INVALID_NO_GENERATOR_VOLTAGE_CONTROL -> {
+                    LOGGER.info("Network {} is invalid, no calculation will be done", lfNetwork);
+                    // we want to report this
+                    lfNetwork.setReportNode(Reports.includeLfNetworkReportNode(reportNode, lfNetwork.getReportNode()));
+                }
+                case INVALID_NO_GENERATOR -> deadComponentsCount++; // will be reported later on altogether
             }
+        }
+        if (deadComponentsCount > 0) {
+            Reports.reportComponentsWithoutGenerators(reportNode, deadComponentsCount);
+            LOGGER.info("No calculation will be done on {} network(s) that have no generators", deadComponentsCount);
         }
         return lfNetworks;
     }
@@ -612,7 +732,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
             getBranches().stream()
                     .filter(b -> b.getBus1() != null && b.getBus2() != null)
                     .forEach(b -> connectivity.addEdge(b.getBus1(), b.getBus2(), b));
-            connectivity.setMainComponentVertex(getSlackBus());
+            connectivity.setMainComponentVertex(getSlackBuses().get(0));
             // this is necessary to create a first temporary changes level in order to allow
             // some outer loop to change permanently the connectivity (with automation systems for instance)
             // this one will never be reverted
@@ -635,13 +755,14 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
         return listeners;
     }
 
-    public boolean isValid() {
-        return valid;
+    public Validity getValidity() {
+        return validity;
     }
 
     /**
      * Disable transformer voltage control when there is no generator controlling voltage on the connected component
-     * that belong to the not controlled side of the transformer.
+     * that belong to the not controlled side of the transformer. Note that branches in contingency are not taken into
+     * account.
      */
     public void fixTransformerVoltageControls() {
         List<LfBranch> controllerBranches = new ArrayList<>(1);
@@ -671,7 +792,8 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
                 continue;
             }
             boolean noPvBusesInComponent = componentNoPVBusesMap.computeIfAbsent(getConnectivity().getComponentNumber(notControlledSide),
-                k -> getConnectivity().getConnectedComponent(notControlledSide).stream().noneMatch(LfBus::isGeneratorVoltageControlled));
+                k -> getConnectivity().getConnectedComponent(notControlledSide).stream()
+                        .noneMatch(bus -> bus.isGeneratorVoltageControlled() && bus.isGeneratorVoltageControlEnabled()));
             if (noPvBusesInComponent) {
                 branch.setVoltageControlEnabled(false);
                 LOGGER.trace("Transformer {} voltage control has been disabled because no PV buses on not controlled side connected component",
@@ -715,6 +837,13 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
         return secondaryVoltageControls;
     }
 
+    public Optional<LfSecondaryVoltageControl> getSecondaryVoltageControl(String controlZoneName) {
+        Objects.requireNonNull(controlZoneName);
+        return secondaryVoltageControls.stream()
+                .filter(lfSvc -> lfSvc.getZoneName().equals(controlZoneName))
+                .findFirst();
+    }
+
     private static boolean filterSecondaryVoltageControl(LfSecondaryVoltageControl secondaryVoltageControl) {
         return !secondaryVoltageControl.getPilotBus().isDisabled();
     }
@@ -742,7 +871,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
                 .flatMap(bus -> bus.getVoltageControl(type).orElseThrow().getMergedControllerElements().stream())
                 .filter(Predicate.not(LfElement::isDisabled))
                 .map(element -> (E) element)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<LfBus> getControlledBuses(VoltageControl.Type type) {
@@ -750,7 +879,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
                 .filter(bus -> bus.isVoltageControlled(type))
                 .filter(bus -> bus.getVoltageControl(type).orElseThrow().getMergeStatus() == VoltageControl.MergeStatus.MAIN)
                 .filter(bus -> bus.getVoltageControl(type).orElseThrow().isVisible())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void addOverloadManagementSystem(LfOverloadManagementSystem overloadManagementSystem) {
@@ -759,6 +888,10 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
 
     public List<LfOverloadManagementSystem> getOverloadManagementSystems() {
         return overloadManagementSystems;
+    }
+
+    public void setGeneratorsInitialTargetPToTargetP() {
+        getBuses().stream().flatMap(b -> b.getGenerators().stream()).forEach(LfGenerator::setInitialTargetPToTargetP);
     }
 
     @Override
